; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-imx/extr_mx31moboard-devboard.c_devboard_isp1105_set_vbus.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-imx/extr_mx31moboard-devboard.c_devboard_isp1105_set_vbus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_otg = type { i32 }

@USBH1_VBUSEN_B = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_otg*, i32)* @devboard_isp1105_set_vbus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devboard_isp1105_set_vbus(%struct.usb_otg* %0, i32 %1) #0 {
  %3 = alloca %struct.usb_otg*, align 8
  %4 = alloca i32, align 4
  store %struct.usb_otg* %0, %struct.usb_otg** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32, i32* @USBH1_VBUSEN_B, align 4
  %9 = call i32 @gpio_set_value(i32 %8, i32 0)
  br label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @USBH1_VBUSEN_B, align 4
  %12 = call i32 @gpio_set_value(i32 %11, i32 1)
  br label %13

13:                                               ; preds = %10, %7
  ret i32 0
}

declare dso_local i32 @gpio_set_value(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
